Examples: Clean up. (#29438)

--- a/examples/webgl_loader_tilt.html
+++ b/examples/webgl_loader_tilt.html
@@ -49,6 +49,7 @@
 				renderer = new THREE.WebGLRenderer( { antialias: true } );
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( window.innerWidth, window.innerHeight );
+				renderer.setAnimationLoop( animate );
 				document.body.appendChild( renderer.domElement );
 
 				const loader = new TiltLoader();
@@ -56,12 +57,10 @@
 
 					// console.log( object.children.length );
 					scene.add( object );
-					render();
 
 				} );
 
 				const controls = new OrbitControls( camera, renderer.domElement );
-				controls.addEventListener( 'change', render );
 				controls.target.y = camera.position.y;
 				controls.update();
 
@@ -76,11 +75,9 @@
 
 				renderer.setSize( window.innerWidth, window.innerHeight );
 
-				render();
-
 			}
 
-			function render() {
+			function animate() {
 
 				renderer.render( scene, camera );
 
