--- a/examples/index.html
+++ b/examples/index.html
@@ -246,7 +246,12 @@
 
 			// Reveal "View source" button and set attributes to this example
 			viewSrcButton.style.display = '';
-			viewSrcButton.href = 'https://github.com/mrdoob/three.js/blob/master/examples/' + selected + '.html';
+			if ( selected.includes("ld2studio") ) {
+				viewSrcButton.href = 'https://github.com/LD2Studio/LD2Studio-Editor/blob/three-editor/examples/' + selected + '.html';
+			}
+			else {
+				viewSrcButton.href = 'https://github.com/mrdoob/three.js/blob/master/examples/' + selected + '.html';
+			}
 			viewSrcButton.title = 'View source code for ' + getName( selected ) + ' on GitHub';
 
 		}
