--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         
         <div id="header">
             <h1><span translate="no">three.js (LD2Studio)</span> <a id="version" href="http://github.com/mrdoob/three.js/releases">r168</a></h1>
+
+			<div id="expandButton"></div>
         </div>
 
         <div id="contentWrapper">
@@ -56,6 +58,27 @@
         </div>
         
     </div>
+
+	<script>
+		var panel = document.getElementById( 'panel' );
+		var expandButton = document.getElementById( 'expandButton' );
+		var panelScrim = document.getElementById( 'panelScrim' );
+
+		expandButton.addEventListener( 'click', function ( event ) {
+
+			panel.classList.toggle( 'open' );
+			event.preventDefault();
+
+		} );
+
+		panelScrim.onclick = function ( event ) {
+
+			event.preventDefault();
+			panel.classList.toggle( 'open' );
+
+		};
+
+	</script>
 
     <div id="viewer">
 
