Update Three.js r169
BatchedMesh: add `deleteInstance()` (#29449)

* BatchedMesh: add `deleteInstance()`

* BatchedMesh: prioritize reusing freed instance ids when adding instance

Update Three.js r169

Lensflare: Add WebGPU version. (#29451)

* lensflare example

* fix depth

* remove forceWebGL

* rename

* fix typo

* follow original code

* Update LensflareMesh.js

---------

Co-authored-by: aardgoose <angus.sawyer@email.com>
Co-authored-by: Michael Herzog <michael.herzog@human-interactive.org>

Examples: Update lensflare colors. (#29458)

WebGLRenderer: add reverse-z via EXT_clip_control (#29445)

* WebGLRenderer: add reverse-z via EXT_clip_control

* WebGLRenderer: move conversion methods to utils

Updated builds.

Docs: Improve `WebGLRenderer` page. (#29459)

WebGLProgram: add USE_REVERSEDEPTHBUF define (#29461)

CylinderGeometry: Don't add degenerate triangles (#29460)

* CylinderGeometry: Don't add degenerate triangles

* Change comparison

RenderObject: Introduce `getGeometryCacheKey()` (#29465)

* RenderObject: Added `getGeometryCacheKey()`

* NodeMaterialObserver: Improve skinnedmesh and morph supports

* cleanup

Update actions/setup-node digest to 0a44ba7 (#29466)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

Update github/codeql-action digest to 294a9d9 (#29467)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

Update devDependencies (non-major) (#29468)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

Updated builds.

CurveModifierGPU: WebGPURenderer port. (#29453)

* curve mod

* lint

* update screenshot

* use correct constant

* use filtered texture

---------

Co-authored-by: aardgoose <angus.sawyer@email.com>

Examples: Clean up. (#29473)

* Examples: Clean up.

* E2E: Update screenshot.

SpriteNodeMaterial: Add sizeAttenuation (#29394)

* SpriteNodeMaterial: Add sizeAttenuation

* Regenerate screenshot

* revert mat4 mul with vec4(,1)?

* rever

--- a/examples/webgpu_postprocessing_motion_blur.html
+++ b/examples/webgpu_postprocessing_motion_blur.html
@@ -155,6 +155,7 @@
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( window.innerWidth, window.innerHeight );
 				renderer.setAnimationLoop( animate );
+				renderer.shadowMap.enabled = true;
 				document.body.appendChild( renderer.domElement );
 
 				stats = new Stats();
