--- a/editor/index.html
+++ b/editor/index.html
@@ -61,7 +61,6 @@
 		<script type="module">
 
 			import * as THREE from 'three';
-			import { RapierPhysics } from 'three/addons/physics/Rapier.js';
 			
 			import { Editor } from './js/Editor.js';
 			import { Viewport } from './js/Viewport.js';
@@ -77,23 +76,21 @@
 
 			//
 			
-			const physics = await RapierPhysics();
-
 			const editor = new Editor();
-
+			
 			window.editor = editor; // Expose editor to Console
 			window.THREE = THREE; // Expose THREE to APP Scripts and Console
-
+			
 			const viewport = new Viewport( editor );
 			document.body.appendChild( viewport.dom );
-
+			
 			const toolbar = new Toolbar( editor );
 			document.body.appendChild( toolbar.dom );
-
+			
 			const script = new Script( editor );
 			document.body.appendChild( script.dom );
 
-			const player = new Player( editor, physics );
+			const player = await Player( editor );
 			document.body.appendChild( player.dom );
 
 			const sidebar = new Sidebar( editor );
