Add addons features & refactoring project properties
Testing OrbitalControl addon

Add addon entry on project properties

Refactoring : Physics & Addons action without refresh page

Refactoring code

Refactoring & Fix bug

Refactoring

--- a/editor/index.html
+++ b/editor/index.html
@@ -90,7 +90,7 @@
 			const script = new Script( editor );
 			document.body.appendChild( script.dom );
 
-			const player = await Player( editor );
+			const player = new Player( editor );
 			document.body.appendChild( player.dom );
 
 			const sidebar = new Sidebar( editor );
