refactoring project properties saving in database

--- a/editor/index.html
+++ b/editor/index.html
@@ -169,6 +169,7 @@
 				signals.sceneGraphChanged.add( saveState );
 				signals.scriptChanged.add( saveState );
 				signals.historyChanged.add( saveState );
+				signals.projectPropertiesChanged.add( saveState );
 
 			} );
 
