--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 			<div id="expandButton"></div>
         </div>
 
+		<div id="panelScrim"></div>
+
         <div id="contentWrapper">
 
             <div id="content">
