Fix physics publishing

--- a/editor/js/libs/app/index.html
+++ b/editor/js/libs/app/index.html
@@ -29,7 +29,7 @@
 
 			import * as THREE from 'three';
 			import { APP } from './js/app.js';
-			/* physics library */
+			/* importing physics library */
 
 			window.THREE = THREE; // Used by APP Scripts.
 
