Add CapsuleCollisionShape, kinematic velocity body

--- a/examples/ld2studio_rapier_kinematic_velocity.html
+++ b/examples/ld2studio_rapier_kinematic_velocity.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>three.js physics - rapier3d instancing</title>
+		<title>three.js physics - rapier3d kinematic velocity</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<link type="text/css" rel="stylesheet" href="main.css">
@@ -9,7 +9,7 @@
 	<body>
 
 		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> physics - <a href="https://github.com/dimforge/rapier.js" target="_blank">rapier</a> instanced bodies
+			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> physics - <a href="https://github.com/dimforge/rapier.js" target="_blank">rapier</a> kinematic velocity
 		</div>
 
 		<script type="importmap">
@@ -36,7 +36,8 @@
 			let camera, scene, renderer, stats;
 			let physics, position;
 
-			let boxes, spheres;
+			let boxes, spheres, capsules;
+			let paddle;
 
 
 			init();
@@ -142,7 +143,48 @@
 
 				}
 
+				// Capsules
+
+				const geometryCapsule = new THREE.CapsuleGeometry( 0.05, 0.1, 4 );
+				capsules = new THREE.InstancedMesh( geometryCapsule, material, 100 );
+				capsules.instanceMatrix.setUsage( THREE.DynamicDrawUsage ); // will be updated every frame
+				capsules.castShadow = true;
+				capsules.receiveShadow = true;
+				capsules.userData.physics = { mass: 1 };
+				scene.add( capsules );
+
+				for ( let i = 0; i < capsules.count; i ++ ) {
+
+					matrix.setPosition( Math.random() - 0.5, Math.random() * 2, Math.random() - 0.5 );
+					capsules.setMatrixAt( i, matrix );
+					capsules.setColorAt( i, color.setHex( 0xffffff * Math.random() ) );
+
+				}
+
+				// Paddle
+
+				const geometryPaddle = new THREE.BoxGeometry( 2.0, 0.4, 0.1 );
+				const materialPaddle = new THREE.MeshLambertMaterial( { color: 0xffffff } );
+				paddle = new THREE.Mesh( geometryPaddle, materialPaddle );
+				paddle.position.y = 0.2;
+				paddle.castShadow = true;
+				paddle.receiveShadow = true;
+				paddle.userData.physics = {
+					mass: 1,
+					mode: 'kinematic_velocity',
+					velocity: new THREE.Vector3( 0, 0, 0 ),
+					angularVelocity: new THREE.Vector3( 0, 0, 0 ),
+				};
+				scene.add( paddle );
+
 				physics.addScene( scene );
+
+				params.paddleAngVel = 0.0;
+				gui.add( params, 'paddleAngVel', -10, 10, 0.1 ).onChange( function () {
+
+					physics.setMeshAngularVelocity( paddle, new THREE.Vector3( 0, params.paddleAngVel, 0 ) );
+
+				});
 
 				//
 
@@ -175,6 +217,13 @@
 
 					position.set( 0, Math.random() + 1, 0 );
 					physics.setMeshPosition( spheres, position, index );
+
+					//
+
+					index = Math.floor( Math.random() * capsules.count );
+
+					position.set( 0, Math.random() + 1, 0 );
+					physics.setMeshPosition( capsules, position, index );
 
 				};
 
