Add kinematic position mode

--- a/examples/ld2studio_rapier_instanced_bodies.html
+++ b/examples/ld2studio_rapier_instanced_bodies.html
@@ -96,7 +96,7 @@
 				);
 				floor.position.y = - 2.5;
 				floor.receiveShadow = true;
-				floor.userData.physics = { mode: 'static' };
+				floor.userData.physics = { mode: 'fixed' };
 				scene.add( floor );
 
 				// Rigid bodies material
@@ -113,7 +113,7 @@
 				boxes.instanceMatrix.setUsage( THREE.DynamicDrawUsage ); // will be updated every frame
 				boxes.castShadow = true;
 				boxes.receiveShadow = true;
-				boxes.userData.physics = { mass: 1 };
+				boxes.userData.physics = { mass: 1, mode: 'dynamic' };
 				scene.add( boxes );
 
 				for ( let i = 0; i < boxes.count; i ++ ) {
@@ -131,7 +131,7 @@
 				spheres.instanceMatrix.setUsage( THREE.DynamicDrawUsage ); // will be updated every frame
 				spheres.castShadow = true;
 				spheres.receiveShadow = true;
-				spheres.userData.physics = { mass: 1 };
+				spheres.userData.physics = { mass: 1, mode: 'dynamic' };
 				scene.add( spheres );
 
 				for ( let i = 0; i < spheres.count; i ++ ) {
