--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="panel">
         
         <div id="header">
-            <h1><span translate="no">three.js (LD2Studio)</span> <a id="version" href="http://github.com/mrdoob/three.js/releases">r169</a></h1>
+            <h1><span translate="no">LD2Studio Three.js </span> <a id="version" href="http://github.com/mrdoob/three.js/releases">r169</a></h1>
 
 			<div id="expandButton"></div>
         </div>
@@ -44,7 +44,7 @@
 						<li><a href="https://github.com/LD2Studio/LD2Studio-Editor">github</a></li>
 						<li><a href="">download</a></li>
 					</ul>
-                    <h2>Resources</h2>
+                    <h2>Resources Three.js</h2>
 					<ul>
 						<li><a href="manual/#en/fundamentals" target="_blank" rel="noopener">Three.js Fundamentals</a></li>
 						<li><a href="https://threejs-journey.xyz/" target="_blank" rel="noopener">Three.js Journey</a></li>
