--- a/examples/ld2studio_rapier_kinematic_position.html
+++ b/examples/ld2studio_rapier_kinematic_position.html
@@ -25,7 +25,7 @@
 
 			import * as THREE from 'three';
 			import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
-			import { RapierPhysics } from 'three/addons/physics/Rapier.js';
+			import { RapierPhysics } from 'three/addons/physics/RapierPhysicsEngine.js';
 			import Stats from 'three/addons/libs/stats.module.js';
 			import { GUI } from 'three/addons/libs/lil-gui.module.min.js';
 
@@ -97,7 +97,7 @@
 				);
 				floor.position.y = - 2.5;
 				floor.receiveShadow = true;
-				floor.userData.physics = { mode: 'fixed' };
+				floor.userData.physics = { type: 'fixed' };
 				scene.add( floor );
 
 				// Rigid bodies material
@@ -114,7 +114,7 @@
 				boxes.instanceMatrix.setUsage( THREE.DynamicDrawUsage ); // will be updated every frame
 				boxes.castShadow = true;
 				boxes.receiveShadow = true;
-				boxes.userData.physics = { mass: 1, restitution: 0.5, mode: 'dynamic' };
+				boxes.userData.physics = { mass: 1, restitution: 0.5, type: 'dynamic' };
 				scene.add( boxes );
 
 				for ( let i = 0; i < boxes.count; i ++ ) {
@@ -132,7 +132,7 @@
 				spheres.instanceMatrix.setUsage( THREE.DynamicDrawUsage ); // will be updated every frame
 				spheres.castShadow = true;
 				spheres.receiveShadow = true;
-				spheres.userData.physics = { mass: 1, restitution: 1.0, mode: 'dynamic' };
+				spheres.userData.physics = { mass: 1, restitution: 1.0, type: 'dynamic' };
 				scene.add( spheres );
 
 				for ( let i = 0; i < spheres.count; i ++ ) {
@@ -150,7 +150,7 @@
 				capsules.instanceMatrix.setUsage( THREE.DynamicDrawUsage ); // will be updated every frame
 				capsules.castShadow = true;
 				capsules.receiveShadow = true;
-				capsules.userData.physics = { mass: 1, restitution: 0.8, mode: 'dynamic' };
+				capsules.userData.physics = { mass: 1, restitution: 0.8, type: 'dynamic' };
 				scene.add( capsules );
 
 				for ( let i = 0; i < capsules.count; i ++ ) {
@@ -169,13 +169,13 @@
 				edge1.position.set( 1.2, 0.25, 0 );
 				edge1.castShadow = true;
 				edge1.receiveShadow = true;
-				edge1.userData.physics = { mode: 'kinematic_position' };
+				edge1.userData.physics = { type: 'kinematic_position' };
 
 				edge2 = new THREE.Mesh( geometryEdge, materialEdge );
 				edge2.position.set( -1.2, 0.25, 0 );
 				edge2.castShadow = true;
 				edge2.receiveShadow = true;
-				edge2.userData.physics = { mode: 'kinematic_position' };
+				edge2.userData.physics = { type: 'kinematic_position' };
 				scene.add( edge1, edge2 );
 
 				params.edgePosition = 0.0;
